<resources>
    <string name="app_name">Wykop Mobilny</string>
    <string name="main_page">Strona Główna</string>
    <string name="wykopalisko">Wykopalisko</string>
    <string name="hits">Hity</string>
    <string name="mikroblog">Mikroblog</string>
    <string name="mywykop">Mój Wykop</string>
    <string name="search">Wyszukiwarka</string>
    <string name="your_profile">Twój profil</string>
    <string name="favourite">Ulubione</string>
    <string name="messages">Wiadomości</string>
    <string name="settings">Ustawienia</string>
    <string name="about">O aplikacji</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="profiles">Użytkownicy</string>
    <string name="actions">Akcje</string>
    <string name="links">Znaleziska</string>
    <string name="link_added">Dodane</string>
    <string name="published">Opublikowane</string>
    <string name="commented">Komentarze</string>
    <string name="buried">Zakopywane</string>
    <string name="digged">Wykopywane</string>
    <string name="entries">Wpisy</string>
    <string name="pref_appearance_settings">Ustawienia wyglądu aplikacji</string>
    <string name="pref_appearance">Wygląd</string>
    <string name="pref_dark_style">Styl nocny</string>
    <string name="useAmoledTheme">Tryb AMOLED dla stylu nocnego</string>
    <string name="defaultScreen">Domyślny ekran aplikacji</string>
    <string name="defaultHotScreen">Domyślny ekran w mikroblogu</string>
    <string name="open_spoilers_in_dialog">Otwieraj spoilery w okienku</string>
    <string name="app_config_images">Ustawienia obrazków</string>
    <string name="app_config_images_minified">Obrazki w trybie miniaturki</string>
    <string name="app_config_images_cut">Zwijaj długie obrazki</string>
    <string name="app_config_images_cut_image_proportion">Wysokość obrazka względem ekranu</string>
    <string name="pref_notifications">Powiadomienia</string>
    <string name="pref_notifications_piggyback">Przechwyć powiadomienie push oficjalnej aplikacji</string>
    <string name="pref_notifications_piggyback_summary">Wymaga zainstalowania oficjalnej aplikacji Wykop.pl</string>
    <string name="pref_notifications_enable">Włącz powiadomienia</string>
    <string name="pref_notifications_frequency">Częstotliwość sprawdzania</string>
    <string name="pref_content_filter">Filtrowanie treści</string>
    <string name="pref_content_plus18">Pokazuj treści 18+</string>
    <string name="pref_content_filter_nsfw">Ukryj treści z tagiem #nsfw</string>
    <string name="pref_content_filter_low_range_authors">Ukrywaj treści zielonek</string>
    <string name="pref_content_filter_without_tags">Ukrywaj treści bez tagów (tylko mirko)</string>
    <string name="pref_content_hide_blacklisted">Nie pokazuj ukrytych treści</string>
    <string name="pref_manage_blacklist">Zarządzaj czarną listą</string>
    <string name="pref_use_built_in_browser">Użyj wbudowanej przeglądarki</string>
    <string name="pref_clear_history">Wyczyść historię wyszukiwarki</string>
    <string name="pref_disable_exit_confirmation">Wyłącz potwierdzenie wyjścia z aplikacji</string>
    <string name="license">Publikacja aplikacji na licencji MIT</string>
    <string name="report_bug">Zgłoś błąd pod tagiem #owmbugi</string>
    <string name="observe_otwartywykopmobilny">Obserwuj tag #otwartywykopmobilny</string>
    <string name="app_version">Wykop Mobilny (%1$s)</string>
    <string name="badges">Osiągnięcia</string>
    <string name="error_occured">Błąd</string>
    <string name="error_cannot_open_activity">Wystąpił błąd podczas wykonywania akcji %s</string>
    <string name="doubleback_to_exit">Naciśnij wstecz aby wyjść z aplikacji</string>
    <string name="expand_image">rozwiń obrazek</string>
    <string name="newest_entries">Najnowsze wpisy</string>
    <string name="share">Udostępnij</string>
    <string name="save_image">Zapisz obraz</string>
    <string name="copy_url">Skopiuj adres URL</string>
    <string name="user_not_logged_in">Aby tego dokonać, musisz się zalogować.</string>
    <string name="votes_count">%1$d</string>
    <string name="date_with_user_app">%1$s via %2$s</string>
    <string name="votePercentageCount">%1$d%% (%2$d głosów)</string>
    <string name="searchNoResults">Ehh, pusto tu…</string>
    <string name="dialogNoVotes">¯\\_(ツ)_/¯\nBrak plusów</string>
    <string name="refresh">Odśwież</string>
    <string name="nav_drawer_open">Nawigacja otwarta</string>
    <string name="nav_drawer_closed">Nawigacja zamknięta</string>
    <string name="reply">Odpowiedz</string>
    <string name="copy_entry_url">Skopiuj adres wpisu</string>
    <string name="copied_to_clipboard">Skopiowano do schowka</string>
    <string name="text_italic">Kursywa</string>
    <string name="text_bold">Pogrubienie</string>
    <string name="insert_photo">Dodaj zdjęcie</string>
    <string name="insert_code">Wstaw kod</string>
    <string name="insert_link">Wstaw link</string>
    <string name="insert_spoiler">Wstaw spoiler</string>
    <string name="text_quote">Cytat</string>
    <string name="insert_emoticon">Wstaw emotikonę</string>
    <string name="insert_photo_galery">Dodaj zdjęcie z galerii</string>
    <string name="insert_photo_url">Dodaj zdjęcie z adresu URL</string>
    <string name="mark_nsfw">Oznacz jako 18+</string>
    <string name="send">Wyślij</string>
    <string name="observed_tags">Obserwowane tagi</string>
    <string name="add_new_entry">Dodaj nowy wpis</string>
    <string name="edit_entry">Edytuj wpis</string>
    <string name="edit_comment">Edytuj komentarz</string>
    <string name="sending_entry">Wysyłanie wpisu…</string>
    <string name="url_address">Adres url</string>
    <string name="link_description">Opis linku</string>
    <string name="confirmation">Jesteś pewien?</string>
    <string name="confirm_exit">Czy na pewno chcesz wyjść?</string>
    <string name="confirm_app_exit">Czy na pewno chcesz zamknąć aplikację?</string>
    <string name="write_comment">Napisz komentarz…</string>
    <string name="markAsRead">Oznacz jako odczytane</string>
    <string name="read_notifications">Odczytano powiadomienia</string>
    <string name="notifications_title">Powiadomienia</string>
    <string name="hashtags_notifications_title">Obserwowane tagi</string>
    <string name="voters">Plusujący</string>
    <string name="voters_list">Lista plusujących</string>
    <string name="bury">Zakop</string>
    <string name="bury_list">Lista zakopujących (%1$d)</string>
    <string name="dig_list">Lista wykopujących (%1$d)</string>
    <string name="copy_content">Kopiuj treść</string>
    <string name="delete">Usuń</string>
    <string name="report">Zgłoś</string>
    <string name="mywykop_all">Wszystko</string>
    <string name="tags">Tagi</string>
    <string name="users">Użytkownicy</string>
    <string name="entryRemoved">[Wpis usunięty]</string>
    <string name="commentRemoved">[Komentarz usunięty]</string>
    <string name="notificationsCountMessage">Posiadasz %1$d nowych powiadomień.</string>
    <string name="observe_tag">Obserwuj tag</string>
    <string name="unobserve_tag">Przestań obserwować tag</string>
    <string name="block_tag">Zablokuj tag</string>
    <string name="unblock_tag">Odblokuj tag</string>
    <string name="update_available">Dostępna aktualizacja</string>
    <string name="update_app">Zaktualizuj aplikację do najnowszej wersji</string>
    <string name="do_not_show_again">Nie pokazuj ponownie</string>
    <string name="update">Zaktualizuj</string>
    <string name="cancel">Anuluj</string>
    <string name="close">Zamknij</string>
    <string name="related">Powiązane</string>
    <string name="upvoters">Wykopujący</string>
    <string name="downvoters">Zakopujący</string>
    <string name="period24">Gorące wpisy 24h</string>
    <string name="period12">Gorące wpisy 12h</string>
    <string name="period6">Gorące wpisy 6h</string>
    <string name="active_entries">Aktywne wpisy</string>
    <string name="sortby_newest">Najnowsze komentarze</string>
    <string name="sortby_best">Najlepsze komentarze</string>
    <string name="sortby_oldest">Najstarsze komentarze</string>
    <string name="notifications_directed">Do mnie</string>
    <string name="fontsize_small">Mała</string>
    <string name="fontsize_tiny">Bardzo mała</string>
    <string name="fontsize_normal">Standardowa</string>
    <string name="fontsize_large">Duża</string>
    <string name="fontsize_huge">Bardzo duża</string>
    <string name="pref_fontsize">Wielkość czcionki</string>
    <string name="upcoming_sortby_comments">Komentowane</string>
    <string name="upcoming_sortby_votes">Wykopywane</string>
    <string name="upcoming_sortby_active">Aktywne</string>
    <string name="upcoming_sortby_date">Najnowsze</string>
    <string name="bury_reason">Powód zakopu</string>
    <string name="reason_duplicate">Duplikat</string>
    <string name="reason_spam">Spam</string>
    <string name="reason_fake_info">Informacja nieprawdziwa</string>
    <string name="reason_wrong_content">Treść nieodpowiednia</string>
    <string name="reason_unsuitable_content">Nie nadaje się</string>
    <string name="january">Styczeń</string>
    <string name="february">Luty</string>
    <string name="march">Marzec</string>
    <string name="april">Kwiecień</string>
    <string name="may">Maj</string>
    <string name="june">Czerwiec</string>
    <string name="july">Lipiec</string>
    <string name="august">Sierpień</string>
    <string name="september">Wrzesień</string>
    <string name="october">Październik</string>
    <string name="novermber">Listopad</string>
    <string name="december">Grudzień</string>
    <string name="hits_popular">Ostatnio popularne</string>
    <string name="hits_day">Hity dnia</string>
    <string name="hits_week">Hity tygodnia</string>
    <string name="hits_month">Hity miesiąca</string>
    <string name="hits_year">Hity roku</string>
    <string name="hits_month_toolbar">Hity miesiąca (%1$d/%2$d)</string>
    <string name="hits_year_toolbar">Hity roku (%1$d)</string>
    <string name="private_message">Wiadomość prywatna</string>
    <string name="followers">%1$d obserwujących</string>
    <string name="observe_user">Obserwuj</string>
    <string name="unobserve_user">Nie obserwuj</string>
    <string name="block_user">Zablokuj</string>
    <string name="unblock_user">Odblokuj</string>
    <string name="link_simple_list">Prosta lista znalezisk</string>
    <string name="link_show_author">Pokaż autora znaleziska</string>
    <string name="link_show_image">Pokaż miniaturkę znaleziska</string>
    <string name="linkImagePosition">Styl miniaturki znaleziska</string>
    <string name="link_image_position_left">Mała po lewej stronie</string>
    <string name="link_image_position_right">Mała po prawej stronie</string>
    <string name="link_image_position_top">Duża nad tekstem</string>
    <string name="link_image_position_bottom">Duża pod tekstem</string>
    <string name="open_in">Otwórz w ...</string>
    <string name="save_as_mp4">Zapisz do mp4</string>
    <string name="save_file_ok">Zapisano plik</string>
    <string name="save_file_failed">"Błąd podczas zapisu pliku"</string>
    <string name="addlink_url_address">Adres URL znaleziska które chcesz dodać</string>
    <string name="add_new_link">Dodaj nowe znalezisko</string>
    <string name="dialog_piggyback_market_message"><![CDATA[Aby skorzystać z tej funkcji, wymagana jest instalacja oficjalnej aplikacji Wykop.pl. Po instalacji i zalogowaniu się w aplikacji, Wykop Mobilny będzie mógł korzystać z powiadomień push serwisu. Następnie należy wrócić do ustawień i aktywować tę funkcje ponownie.]]></string>
    <string name="dialog_piggyback_market_title">Powiadomienia push</string>
    <string name="toast_allow_notification_access">Musisz udzielić dostępu do powiadomień</string>
    <string name="addlink_no_description">Brak opisu</string>
</resources>