<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/format_bold"
        android:title="@string/text_bold"
        android:icon="@drawable/ic_format_bold"
        app:showAsAction="always" />
    <item
        android:id="@+id/format_italic"
        android:title="@string/text_italic"
        android:icon="@drawable/ic_format_italic"
        app:showAsAction="always" />
    <item
        android:id="@+id/format_quote"
        android:title="@string/text_quote"
        android:icon="@drawable/ic_format_quote"
        app:showAsAction="always" />
    <item
        android:id="@+id/insert_link"
        android:title="@string/insert_link"
        android:icon="@drawable/ic_insert_link"
        app:showAsAction="always" />
    <item
        android:id="@+id/insert_code"
        android:title="@string/insert_code"
        android:icon="@drawable/ic_code"
        app:showAsAction="always" />

    <item
        android:id="@+id/insert_spoiler"
        android:title="@string/insert_spoiler"
        android:icon="@drawable/ic_spoiler"
        app:showAsAction="always" />

    <item
        android:id="@+id/insert_emoticon"
        android:title="@string/insert_emoticon"
        android:icon="@drawable/ic_insert_emoticon"
        app:showAsAction="always" />
    <item
        android:id="@+id/insert_photo"
        android:title="@string/insert_photo"
        android:icon="@drawable/ic_photo"
        app:showAsAction="always" />
</menu>