<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/popular"
        android:title="@string/hits_popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/byDay"
        android:title="@string/hits_day"
        app:showAsAction="never"/>

    <item
        android:id="@+id/byWeek"
        android:title="@string/hits_week"
        app:showAsAction="never"/>

    <item
        android:id="@+id/byMonth"
        android:title="@string/hits_month"
        app:showAsAction="never"/>

    <item
        android:id="@+id/byYear"
        android:title="@string/hits_year"
        app:showAsAction="never"/>

</menu>