<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/refresh_icon"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/period6"
        android:title="@string/period6"
        app:showAsAction="never" />
    <item
        android:id="@+id/period12"
        android:title="@string/period12"
        app:showAsAction="never" />
    <item
        android:id="@+id/period24"
        android:title="@string/period24"
        app:showAsAction="never" />
    <item
        android:id="@+id/newest"
        android:title="@string/newest_entries"
        app:showAsAction="never" />
</menu>