<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sortByActive"
        android:title="@string/upcoming_sortby_active"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sortByDate"
        android:title="@string/upcoming_sortby_date"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sortByVotes"
        android:title="@string/upcoming_sortby_votes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sortByComments"
        android:title="@string/upcoming_sortby_comments"
        app:showAsAction="never"/>

</menu>