<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_save_image"
        android:title="@string/save_image"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_save_mp4"
        android:title="@string/save_as_mp4"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/open_in"
        app:showAsAction="never"
        />

</menu>
