<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.takisoft.preferencex.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/pref_appearance"
        >

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="useDarkTheme"
            android:title="@string/pref_dark_style"
            android:defaultValue="false"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="useAmoledTheme"
            android:title="@string/useAmoledTheme"
            android:defaultValue="false"
            />

        <androidx.preference.ListPreference
            app:iconSpaceReserved="false"
            android:key="defaultScreen"
            android:title="@string/defaultScreen"
            android:entries="@array/preferences_default_screen"
            android:entryValues="@array/preferences_default_screen_values"
            android:defaultValue="mainpage"
            />

        <androidx.preference.ListPreference
            app:iconSpaceReserved="false"
            android:key="fontSize"
            android:title="@string/pref_fontsize"
            android:entries="@array/preferences_fontsize"
            android:entryValues="@array/preferences_fontsize_values"
            android:defaultValue="normal"
            />
    </com.takisoft.preferencex.PreferenceCategory>

    <com.takisoft.preferencex.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Ustawienia odtwarzacza"
        >

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="enableYoutubePlayer"
            android:title="Użyj odtwarzacza YouTube"
            android:defaultValue="true"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="enableEmbedPlayer"
            android:title="Użyj playera dla innych mediów"
            android:defaultValue="true"
            />
    </com.takisoft.preferencex.PreferenceCategory>

    <com.takisoft.preferencex.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Mikroblog"
        >
        <androidx.preference.ListPreference
            app:iconSpaceReserved="false"
            android:key="hotEntriesScreen"
            android:title="@string/defaultHotScreen"
            android:entries="@array/preferences_hot_screen"
            android:entryValues="@array/preferences_hot_screen_values"
            android:defaultValue="newest"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="cutLongEntries"
            android:title="Przycinaj długie wpisy"
            android:defaultValue="true"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="openSpoilersDialog"
            android:title="@string/open_spoilers_in_dialog"
            android:defaultValue="true"
            />

    </com.takisoft.preferencex.PreferenceCategory>

    <com.takisoft.preferencex.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Znaleziska"
        >

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="linkSimpleList"
            android:title="@string/link_simple_list"
            android:defaultValue="false"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="linkShowImage"
            android:title="@string/link_show_image"
            android:defaultValue="true"
            />

        <androidx.preference.ListPreference
            app:iconSpaceReserved="false"
            android:key="linkImagePosition"
            android:title="@string/linkImagePosition"
            android:entries="@array/preferences_link_image_position"
            android:entryValues="@array/preferences_link_image_position_values"
            android:defaultValue="left"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="linkShowAuthor"
            android:title="@string/link_show_author"
            android:defaultValue="false"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="hideLinkCommentsByDefault"
            android:title="Zwijaj wszystkie komentarze"
            android:defaultValue="false"
            />

    </com.takisoft.preferencex.PreferenceCategory>

    <com.takisoft.preferencex.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/app_config_images"
        >

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="showMinifiedImages"
            android:title="@string/app_config_images_minified"
            android:defaultValue="false"
            />

        <androidx.preference.CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="cutImages"
            android:title="@string/app_config_images_cut"
            android:defaultValue="true"
            />

        <androidx.preference.SeekBarPreference
            app:iconSpaceReserved="false"
            android:key="cutImageProportion"
            android:title="@string/app_config_images_cut_image_proportion"
            android:defaultValue="60"
            app:msbp_minValue="20"
            app:msbp_maxValue="150"
            app:msbp_interval="10"
            app:msbp_measurementUnit="%"
            app:msbp_dialogEnabled="false"
            />

    </com.takisoft.preferencex.PreferenceCategory>

</androidx.preference.PreferenceScreen>
