<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bury_reason"
        android:textSize="@dimen/bottomsheet_item_title_text_size"
        android:paddingStart="@dimen/bottomsheet_item_padding_horizontal"
        android:paddingEnd="@dimen/bottomsheet_item_padding_horizontal"
        android:paddingTop="@dimen/bottomsheet_item_padding_vertical"
        android:paddingBottom="@dimen/bottomsheet_item_padding_vertical"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        android:background="?attr/lineColor"/>

    <LinearLayout
        android:id="@+id/reason_duplicate"
        style="@style/BottomSheetMenuItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reason_duplicate"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reason_spam"
        style="@style/BottomSheetMenuItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reason_spam"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reason_fake_info"
        style="@style/BottomSheetMenuItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reason_fake_info"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reason_wrong_content"
        style="@style/BottomSheetMenuItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reason_wrong_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reason_unsuitable_content"
        style="@style/BottomSheetMenuItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reason_unsuitable_content"/>

    </LinearLayout>

</LinearLayout>