<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/cardListColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/insert_gallery"
        style="@style/BottomSheetMenuItem">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="?attr/markdownInsertPhoto" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/insert_photo_galery"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_url"
        style="@style/BottomSheetMenuItem">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="?attr/bottomSheetRelated" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/insert_photo_url" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mark_nsfw"
        style="@style/BottomSheetMenuItem">

        <CheckBox
            android:id="@+id/mark_nsfw_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="?attr/bottomSheetReport" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/mark_nsfw" />
    </LinearLayout>
</LinearLayout>